--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-selenium==3.141.0
+async-generator==1.10
+h11==0.13.0
+outcome==1.2.0
+pyOpenSSL==22.0.0
+PySocks==1.7.1
+selenium==4.4.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+trio==0.21.0
+trio-websocket==0.9.2
+undetected-chromedriver==3.1.5.post4
+websockets==10.3
+wsproto==1.1.0
